--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bulma": "^0.4.2",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
+    "marvel-comics-api": "^1.3.0",
     "mongoose": "^4.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -41,8 +42,8 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "sass-loader": "^6.0.6",
-    "url-loader": "^0.5.9",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
