--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bulma": "^0.4.2",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "marvel-comics-api": "^1.3.0",
     "mongoose": "^4.11.0",
     "react": "^15.6.1",
