--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "start": "webpack-dev-server"
+    "start": "concurrently \"node server.js\" \"webpack-dev-server\""
   },
   "repository": "git+https://github.com/AakashGfude/card-game.git",
   "author": "Aakash",
@@ -19,7 +19,9 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "bulma": "^0.4.2",
+    "concurrently": "^3.5.0",
     "express": "^4.15.3",
+    "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "marvel-comics-api": "^1.3.0",
