--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -47,7 +48,6 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
 }
