--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "start": "concurrently \"webpack\" \"node server.js\""
+    "start": "concurrently \"yarn run webpack\" \"node server.js\""
   },
   "repository": "git+https://github.com/AakashGfude/card-game.git",
   "author": "Aakash",
