--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.0.0"
-  },
-  "devDependencies": {
+    "webpack": "^3.0.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -44,10 +42,12 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.5.9"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0",
     "webpack-dev-server": "^2.5.0"
   }
 }
