--- a/package.json
+++ b/package.json
@@ -18,34 +18,35 @@
   "homepage": "https://github.com/AakashGfude/card-game#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "bulma": "^0.4.2",
+    "clean-webpack-plugin": "^0.1.16",
     "concurrently": "^3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.4",
     "marvel-comics-api": "^1.3.0",
     "mongoose": "^4.11.0",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.0.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "html-webpack-plugin": "^2.29.0",
-    "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
