--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "webpack-dev-server": "^2.5.0"
   }
 }
