--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "yarn",
     "start:server": "node server.js",
     "webpack:build-dev": "webpack --env=dev",
     "webpack:build-prod": "webpack --env=prod",
@@ -50,7 +49,8 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0"
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "jquery": "*"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
