--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "lodash": "^4.17.4",
     "marvel-comics-api": "^1.3.0",
     "mongoose": "^4.11.0",
+    "newrelic": "^1.40.0",
     "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -48,8 +50,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0"
+    "webpack": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
