--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "node server.js",
+    "start:server": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 server.js",
     "nodemon": "nodemon server.js",
     "webpack:build-dev": "webpack --env=dev",
     "webpack:build-prod": "webpack --env=prod",
